# beataml2.0_svm

./: .gitignore  .gitmodules  README.md  data_preparation.R  project_proposal.bib
presentation/: .gitignore  sakura.scss  stat5353_presentation.html  stat5353_presentation.qmd
stat5353_project/: Cargo.toml
stat5353_project/src/: lib.rs  main.rs  reader.rs  svm.rs
