[package]
name = "stat5353_project"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
indicatif = "0.17.8"
lazy_static = "1.4.0"
linfa = "0.7.0"
linfa-kernel = "0.7.0"
linfa-svm = "0.7.0"
log = "0.4.21"
ndarray = "0.15.6"
rand = "0.8.5"
rayon = "1.9.0"
simple_logger = "4.3.3"

[profile.release]
lto = true
